--- a/client/main.css
+++ b/client/main.css
@@ -3,3 +3,57 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-color: #111;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.player-card {
+  background-color: #1f375b;
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  /* border-radius: 10px; */
+  margin: 10px;
+}
+
+.top-card {
+  background-color: #1a2e4c;
+  width: 100%;
+  height: 50%;
+  /* border-radius: 7px; */
+  /* border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0; */
+}
+
+.top-card img {
+  padding-left: 10px;
+  float: left;
+  width: 55%;
+  height: 100%;
+}
+
+.top-card .fppg {
+  padding-right: 10px;
+  padding-top: 10px;
+  float: right;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  height: 50%;
+}
+
+table, th, td {
+  border: 1px solid white;
+  text-align: center;
+}
+
+th {
+  height: 30px;
+}
