--- a/client/main.css
+++ b/client/main.css
@@ -5,27 +5,51 @@
 }
 
 body {
-  background-color: #111;
+  background-color: #1f375b;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.player-card {
-  background-color: #1f375b;
+header {
+  background-color: #1493ff;
+  height: 50px;
+  text-align: center;
+  padding-top: 6px;
+}
+
+.scores {
+  background-color: #333;
+  height: 40px;
+  width: 100%;
+  text-align: center;
+  padding-top: 6px;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+}
+
+.scores h2 {
   display: inline-block;
-  width: 300px;
-  height: 300px;
-  /* border-radius: 10px; */
-  margin: 10px;
+  margin-right: 30px;
+}
+
+
+.player-card {
+  background-color: #fff;
+  color: #333;
+  display: inline-block;
+  width: 320px;
+  height: 340px;
+  margin-right:10px;
 }
 
 .top-card {
-  background-color: #1a2e4c;
+  background-color: #ddd;
   width: 100%;
   height: 50%;
-  /* border-radius: 7px; */
-  /* border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0; */
 }
 
 .top-card img {
@@ -50,8 +74,11 @@ table {
 }
 
 table, th, td {
-  border: 1px solid white;
-  text-align: center;
+  border: 1px solid #333;
+}
+
+td {
+  padding-left: 6px;
 }
 
 th {
